testsuite/tests/unlifted-datatypes/should_fail/all.T
test('UnlDataPolySigs', normal, compile_fail, [''])
test('UnlDataNullaryPoly', normal, compile_fail, [''])
